:lipstick: fix scrollbar

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -39,3 +39,26 @@ body {
     color: #61d0ff;
   }
 }
+
+*::-webkit-scrollbar {
+  background-color: transparent;
+  width: 8px;
+}
+*::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+*::-webkit-scrollbar-track:hover {
+  background-color: transparent;
+}
+*::-webkit-scrollbar-thumb {
+  background-color: #282828;
+  border-radius: 8px;
+  border: 5px solid transparent;
+}
+*::-webkit-scrollbar-thumb:hover {
+  background-color: #4d4d4d;
+  border: 4px solid transparent;
+}
+*::-webkit-scrollbar-button {
+  display: none;
+}
